--- a/src/components/pages/battle/battle.module.css
+++ b/src/components/pages/battle/battle.module.css
@@ -1,6 +1,7 @@
 .container {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	gap: 0 20px;
 	align-items: flex-start;
 	justify-content: center;
