--- a/src/reusable/css/reusable.module.css
+++ b/src/reusable/css/reusable.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin: 10% 0 0 0;
+	margin: 100px 0 0 0;
 }
 
 .main_title,
@@ -17,6 +17,7 @@
 	font-weight: 700;
 	margin: 0 0 15px 0;
 	letter-spacing: .25em;
+	text-align: center;
 }
 
 .item {
